--- a/PonzianiComponents/articles/toc.yml
+++ b/PonzianiComponents/articles/toc.yml
@@ -1,2 +1,12 @@
-- name: Introduction
-  href: intro.md
+- name: Tutorial
+  items:
+  - name: Step 1 - Preparations
+    href: tutorial_1_1.md
+  - name: Step 2 - Simple Board with Automatic Engine Enalysis
+    href: tutorial_1_2.md
+  - name: Step 3 - Adding an Evaluation Bar
+    href: tutorial_1_3.md
+  - name: Step 4 - Adding a Scoresheet
+    href: tutorial_1_4.md
+  - name: Step 5 - Make the Scoresheet Interactive
+    href: tutorial_1_5.md
